@@ -1,233 +1,147 @@
 package org.pucar.dristi.web.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import jakarta.servlet.ServletException;
 import org.egov.common.contract.request.RequestInfo;
+import org.egov.common.contract.request.User;
 import org.egov.common.contract.response.ResponseInfo;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
 import org.pucar.dristi.service.AdvocateClerkService;
 import org.pucar.dristi.util.ResponseInfoFactory;
 import org.pucar.dristi.web.models.*;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@ExtendWith(MockitoExtension.class)
+@SpringBootTest
 public class ClerkApiControllerTest {
 
-    @Mock
-    private MockMvc mockMvc;
+    @Autowired
+    private ClerkApiController advocateApiController;
 
-    @Mock
-    private AdvocateClerkService advocateClerkService;
-
+    @MockBean
+    private AdvocateClerkService advocateService;
     @Mock
     private ResponseInfoFactory responseInfoFactory;
 
-    @Mock
-    private AdvocateClerkRequest advocateClerkRequest;
-
-    @Mock
-    private AdvocateClerkResponse advocateClerkResponse;
-
-    @InjectMocks
-    private ClerkApiController clerkApiController;
-
-    @Mock
-    private AdvocateClerkSearchRequest advocateClerkSearchRequest;
-
     @BeforeEach
     public void setup() {
-        mockMvc = MockMvcBuilders.standaloneSetup(clerkApiController).build();
+        MockitoAnnotations.openMocks(this);
+    }
 
-
+    @Test
+    public void testAdvocateClerkV1CreatePost() {
+        AdvocateClerkRequest request = new AdvocateClerkRequest();
         RequestInfo requestInfo = new RequestInfo();
-        requestInfo.setApiId("apiId");
+        request.setRequestInfo(requestInfo);
 
-        ResponseInfo responseInfo = new ResponseInfo();
-        responseInfo.setApiId("apiId");
-
-        List<AdvocateClerk> advocateList = new ArrayList<>();
         AdvocateClerk advocate = new AdvocateClerk();
-        advocate.setId(UUID.randomUUID());
-        advocate.setTenantId("tenantId");
-        advocateList.add(advocate);
+        List<AdvocateClerk> advocateList = Arrays.asList(new AdvocateClerk());
+        when(advocateService.registerAdvocateClerkRequest(request)).thenReturn(advocate);
+        when(responseInfoFactory.createResponseInfoFromRequestInfo(requestInfo, true)).thenReturn(new ResponseInfo());
 
-        advocateClerkRequest = new AdvocateClerkRequest();
-        advocateClerkRequest = AdvocateClerkRequest.builder().clerks(advocateList).requestInfo(requestInfo).build();
-        advocateClerkResponse = new AdvocateClerkResponse();
-        advocateClerkResponse = AdvocateClerkResponse.builder().clerks(advocateList).responseInfo(responseInfo).build();
+        ResponseEntity<AdvocateClerkResponse> responseEntity = advocateApiController.clerkV1CreatePost(request);
 
-        AdvocateClerkSearchCriteria advocateClerkSearchCriteria = new AdvocateClerkSearchCriteria();
-        advocateClerkSearchCriteria.setId("id");
-        advocateClerkSearchCriteria.setApplicationNumber("applicationNumber");
-        advocateClerkSearchCriteria.setStateRegnNumber("1234");
+        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
+        assertEquals(advocateList, responseEntity.getBody().getClerks());
+    }
 
-        advocateClerkSearchRequest.setRequestInfo(requestInfo);
-        advocateClerkSearchRequest.setCriteria(List.of(advocateClerkSearchCriteria));
+
+
+    @Test
+    public void testAdvocateClerkV1StatusSearchPost() {
+        String status = "active";
+        String tenantId = "tenantId";
+        List<AdvocateClerk> advocateList = Arrays.asList(new AdvocateClerk());
+        RequestInfo requestInfo = new RequestInfo();
+        User userInfo = new User();
+        userInfo.setType("EMPLOYEE");
+        userInfo.setUuid(UUID.randomUUID().toString());
+        requestInfo.setUserInfo(userInfo);
+        AdvocateSimpleSearchRequest advocateSimpleSearchRequest = new AdvocateSimpleSearchRequest();
+        advocateSimpleSearchRequest.setRequestInfo(requestInfo);
+
+        when(advocateService.searchAdvocateClerkApplicationsByStatus(requestInfo, status, tenantId, 10, 0)).thenReturn(advocateList);
+        when(responseInfoFactory.createResponseInfoFromRequestInfo(null, true)).thenReturn(new ResponseInfo());
+
+        ResponseEntity<AdvocateClerkResponse> responseEntity = advocateApiController.clerkV1StatusSearchPost(status, tenantId, 10, 0, advocateSimpleSearchRequest);
+
+        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
+        assertEquals(advocateList, responseEntity.getBody().getClerks());
     }
 
     @Test
-    public void advocateClerkV1CreatePostSuccess() throws Exception {
+    public void testAdvocateClerkV1ApplicationnumberSearchPost() {
+        String applicationNumber = "app123";
+        String tenantId = "tenantId";
+        List<AdvocateClerk> advocateList = Arrays.asList(new AdvocateClerk());
+        RequestInfo requestInfo = new RequestInfo();
+        User userInfo = new User();
+        userInfo.setType("EMPLOYEE");
+        userInfo.setUuid(UUID.randomUUID().toString());
+        requestInfo.setUserInfo(userInfo);
+        AdvocateSimpleSearchRequest advocateSimpleSearchRequest = new AdvocateSimpleSearchRequest();
+        advocateSimpleSearchRequest.setRequestInfo(requestInfo);
 
-        // Mock the behavior of your service layer
-        when(advocateClerkService.registerAdvocateClerkRequest(any(AdvocateClerkRequest.class))).thenReturn(advocateClerkRequest.getClerks());
-        when(responseInfoFactory.createResponseInfoFromRequestInfo(any(RequestInfo.class), eq(true))).thenReturn(advocateClerkResponse.getResponseInfo());
+        when(advocateService.searchAdvocateClerkApplicationsByAppNumber(requestInfo, applicationNumber, tenantId, 10, 0)).thenReturn(advocateList);
+        when(responseInfoFactory.createResponseInfoFromRequestInfo(null, true)).thenReturn(new ResponseInfo());
 
-        clerkApiController.setMockInjects(advocateClerkService,responseInfoFactory);
+        ResponseEntity<AdvocateClerkResponse> responseEntity = advocateApiController.clerkV1ApplicationnumberSearchPost(applicationNumber, tenantId, 10, 0, advocateSimpleSearchRequest);
 
-        // Perform the request with the required Accept header
-        mockMvc.perform(post("/clerk/v1/_create")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON) // Explicitly state that the client accepts JSON responses
-                        .content(new ObjectMapper().writeValueAsString(advocateClerkRequest))) // objectMapper to convert request object to JSON
-                        .andExpect(status().isOk()) // Assert that the response status is HttpStatus.OK
-                        .andExpect(content().json(new ObjectMapper().writeValueAsString(advocateClerkResponse)));
+        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
+        assertEquals(advocateList, responseEntity.getBody().getClerks());
     }
 
     @Test
-    public void advocateClerkV1CreatePost_InvalidRequest() {
-        // Prepare invalid request (missing required fields)
-        AdvocateClerkRequest requestBody = new AdvocateClerkRequest();
+    public void testAdvocateClerkV1UpdatePost() {
+        AdvocateClerkRequest request = new AdvocateClerkRequest();
+        RequestInfo requestInfo = new RequestInfo();
+        request.setRequestInfo(requestInfo);
 
-        // Expected validation error
-        when(advocateClerkService.registerAdvocateClerkRequest(any(AdvocateClerkRequest.class)))
-                .thenThrow(new IllegalArgumentException());
+        AdvocateClerk advocate = new AdvocateClerk();
+        List<AdvocateClerk> advocateList = Arrays.asList(advocate);
 
-        clerkApiController.setMockInjects(advocateClerkService, responseInfoFactory);
+        when(advocateService.updateAdvocateClerk(request)).thenReturn(advocate);
+        when(responseInfoFactory.createResponseInfoFromRequestInfo(requestInfo, true)).thenReturn(new ResponseInfo());
 
-        // Perform POST request
-        try {
-            mockMvc.perform(post("/clerk/v1/_create")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .accept(MediaType.APPLICATION_JSON)
-                            .content(new ObjectMapper().writeValueAsString(requestBody)))
-                    .andExpect(status().isBadRequest());  // Expect bad request status
+        ResponseEntity<AdvocateClerkResponse> responseEntity = advocateApiController.clerkV1UpdatePost(request);
 
-        }
-        catch (Exception e){
-            assertTrue(e instanceof ServletException);
-        }
+        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
+        assertEquals(advocateList, responseEntity.getBody().getClerks());
     }
+
     @Test
-    public void testClerkV1SearchPost_Success() {
-        // Mock AdvocateClerkService response
-        List<AdvocateClerk> expectedClerks = Collections.singletonList(new AdvocateClerk());
-        when(advocateClerkService.searchAdvocateClerkApplications(any(), any(), any(), any(), any(),any()))
-                .thenReturn(expectedClerks);
+    void advocateClerkV1SearchPost_Success() {
+        // Arrange
+        AdvocateClerkSearchRequest body = new AdvocateClerkSearchRequest();
+        RequestInfo requestInfo = new RequestInfo();
+        body.setRequestInfo(requestInfo);
+        List<AdvocateClerkSearchCriteria> criteria = new ArrayList<>(); // Your criteria here
+        body.setCriteria(criteria);
+        body.setTenantId("tenant1");
+        Integer limit = 10;
+        Integer offset = 0;
+        List<AdvocateClerk> advocateList = new ArrayList<>(); // Your list of advocates here
+        //when(advocateService.searchAdvocateClerkApplications(requestInfo, criteria, "tenant1", limit, offset)).thenReturn(advocateList);
+        ResponseInfo responseInfo = new ResponseInfo();
+        when(responseInfoFactory.createResponseInfoFromRequestInfo(requestInfo, true)).thenReturn(responseInfo);
 
-        // Mock ResponseInfoFactory response
-        ResponseInfo expectedResponseInfo = new ResponseInfo();
-        when(responseInfoFactory.createResponseInfoFromRequestInfo(any(RequestInfo.class), any(Boolean.class)))
-                .thenReturn(expectedResponseInfo);
+        // Act
+        ResponseEntity<AdvocateClerkListResponse> response = advocateApiController.clerkV1SearchPost(body, limit, offset);
 
-        // Create mock AdvocateClerkSearchRequest
-        AdvocateClerkSearchRequest requestBody = new AdvocateClerkSearchRequest();
-        requestBody.setRequestInfo(new RequestInfo());
-
-        clerkApiController.setMockInjects(advocateClerkService, responseInfoFactory);
-
-        // Perform POST request
-        ResponseEntity<AdvocateClerkResponse> response = clerkApiController.clerkV1SearchPost(requestBody,1,1);
-
-        // Verify response status and content
+        // Assert
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        AdvocateClerkResponse actualResponse = response.getBody();
-        assertNotNull(actualResponse);
-        assertEquals(expectedClerks, actualResponse.getClerks());
-        assertEquals(expectedResponseInfo, actualResponse.getResponseInfo());
-    }
-
-    @Test
-    public void testClerkV1SearchPost_InvalidRequest() {
-        // Prepare invalid request (missing required fields)
-        AdvocateClerkSearchRequest requestBody = new AdvocateClerkSearchRequest();
-
-        // Expected validation error
-        when(advocateClerkService.searchAdvocateClerkApplications(any(), any(), any(), any(), any(), any()))
-                .thenThrow(new IllegalArgumentException("Invalid request"));
-
-        clerkApiController.setMockInjects(advocateClerkService, responseInfoFactory);
-
-        // Perform POST request
-        try {
-            mockMvc.perform(post("/clerk/v1/_search")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .accept(MediaType.APPLICATION_JSON)
-                            .content(new ObjectMapper().writeValueAsString(requestBody)))
-                    .andExpect(status().isBadRequest());  // Expect bad request status
-        }
-        catch (Exception e){
-            assertTrue(e instanceof ServletException);
-        }
-    }
-    @Test
-    public void testClerkV1UpdatePost_Success() {
-        // Mock AdvocateClerkService response
-        List<AdvocateClerk> expectedClerks = Collections.singletonList(new AdvocateClerk());
-        when(advocateClerkService.updateAdvocateClerk(any(AdvocateClerkRequest.class)))
-                .thenReturn(expectedClerks);
-
-        // Mock ResponseInfoFactory response
-        ResponseInfo expectedResponseInfo = new ResponseInfo();
-        when(responseInfoFactory.createResponseInfoFromRequestInfo(any(RequestInfo.class), any(Boolean.class)))
-                .thenReturn(expectedResponseInfo);
-
-        // Create mock AdvocateClerkRequest
-        AdvocateClerkRequest requestBody = new AdvocateClerkRequest();
-        requestBody.setRequestInfo(new RequestInfo());
-
-        clerkApiController.setMockInjects(advocateClerkService, responseInfoFactory);
-
-        // Perform POST request
-        ResponseEntity<AdvocateClerkResponse> response = clerkApiController.clerkV1UpdatePost(requestBody);
-
-        // Verify response status and content
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        AdvocateClerkResponse actualResponse = response.getBody();
-        assertNotNull(actualResponse);
-        assertEquals(expectedClerks, actualResponse.getClerks());
-        assertEquals(expectedResponseInfo, actualResponse.getResponseInfo());
-    }
-
-    @Test
-    public void testClerkV1UpdatePost_InvalidRequest() {
-        // Prepare invalid request (missing required fields)
-        AdvocateClerkRequest requestBody = new AdvocateClerkRequest();
-
-        // Expected validation error
-        when(advocateClerkService.updateAdvocateClerk(any(AdvocateClerkRequest.class)))
-                .thenThrow(new IllegalArgumentException("Invalid request"));
-
-        clerkApiController.setMockInjects(advocateClerkService, responseInfoFactory);
-
-        // Perform POST request
-        try{
-            mockMvc.perform(post("/clerk/v1/_update")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .accept(MediaType.APPLICATION_JSON)
-                            .content(new ObjectMapper().writeValueAsString(requestBody)))
-                    .andExpect(status().isBadRequest());  // Expect bad request status
-        }
-        catch (Exception e){
-            assertTrue(e instanceof ServletException);
-        }
+        assertEquals(criteria, response.getBody().getClerks());
     }
 }
